[package]
name = "kilo-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
crossterm = "0.23.2"
errno = "0.2.8"
error-stack = "0.1.1"
unicode-width = "0.1.9"

[dev-dependencies]
criterion = "0.3.5"
plotters = "0.3.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
test-case = "2.1.0"

[features]
extend_one = []
nightly = ["extend_one"]

[[bench]]
name = "editor_benchmark"
harness = false
